<resources>
    <string name="app_name">Exam Ease</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="examease"><b>ExamEase</b></string>
    <string name="login"><b>Login</b></string>
    <string name="register"><b>Register</b></string>
    <string name="confirm_password"><b>Confirm Password</b></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration_illustration">Registration illustration</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="register_underline"><u>Register</u></string>
    <string name="forgot_password_underline"><u>Forgot Password?</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="default_name">User Name</string>
    <string name="update_details">Update Details</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="swipe_to_change_question"><b>Swipe to Change Question</b></string>
    <string name="next"><b>Next</b></string>
    <string name="flag"><b>Flag</b></string>
    <string name="_99_99">99:99</string>
    <string name="back"><b>Back</b></string>
    <string name="summary"><b>Summary</b></string>
    <string name="submit"><b>Submit</b></string>
    <string name="are_you_sure_you_want_to_submit_the_exam"><b>Are you sure you want to submit the Exam?</b></string>
    <string name="attempted">- Attempted</string>
    <string name="flagged">- Flagged</string>
    <string name="not_attempted">- Not Attempted</string>
    <string name="test_categories"><b>Test Categories</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_questions_0_ntime_0_seconds">Total Questions - 0\nTime - 0 Seconds</string>
    <string name="question_carries_0_marks">Question Carries 0 Marks</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="note_select_any_one_option_below">Note: Select any one option below</string>
    <string name="question">Question</string>
    <string name="edit"><b>Edit</b></string>
    <string name="home"><b>Home</b></string>
    <string name="sign_out"><b>Sign Out</b></string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="rating">Rating:</string>
    <string name="title_summary">Title (Summary)</string>
    <string name="feedback">Feedback</string>
    <string name="close">Close</string>
</resources>