<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_select_any_one_option_below"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Option 1 -->
        <RadioButton
            android:id="@+id/rbOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:textSize="14sp"
            android:textColor="@color/radio_button_text_color"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <!-- Option 2 -->
        <RadioButton
            android:id="@+id/rbOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:textSize="14sp"
            android:textColor="@color/radio_button_text_color"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <!-- Option 3 -->
        <RadioButton
            android:id="@+id/rbOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:textSize="14sp"
            android:textColor="@color/radio_button_text_color"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <!-- Option 4 -->
        <RadioButton
            android:id="@+id/rbOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_4"
            android:textSize="14sp"
            android:textColor="@color/radio_button_text_color"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

    </RadioGroup>
    <TextView
        android:id="@+id/qnMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_carries_0_marks"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_marginTop="16dp" />
</LinearLayout>
