<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@android:color/transparent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_submit_the_exam"
        android:textSize="21sp"
        android:textColor="#000000"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:backgroundTint="#FFFFFF"
            android:text="@string/back"
            android:textColor="#6366F1"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:backgroundTint="#6366F1"
            android:layout_marginStart="8dp"
            app:cornerRadius="6dp"/>

    </LinearLayout>

    </LinearLayout>
