<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_top"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_internal_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="@dimen/profile_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="@dimen/profile_image_size"
                    android:layout_height="@dimen/profile_image_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/profile_image_margin_top"
                    android:background="@drawable/circle_border_edit_profile"
                    android:src="@drawable/default_profile_image_foreground_edit_profile" />

                <TextView
                    android:id="@+id/profileNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/name_margin_top"
                    android:textSize="@dimen/name_text_size"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/update_details_margin_top"
                    android:text="@string/update_details"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_details"
                    android:textColor="@color/hint_text_color" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_field_margin_top"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/ic_user_edit_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_field_margin_top"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email_edit_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_field_margin_top"
                    android:hint="@string/mobile_number"
                    app:startIconDrawable="@drawable/ic_phone_edit_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            android:backgroundTint="#5B67CA"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_press_elevation_edit_profile"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
